Fixed broken links

--- a/src/pug/_template.pug
+++ b/src/pug/_template.pug
@@ -50,7 +50,7 @@ html
           span Input Labs
 
       div.icon
-        +ax('https://discord.gg/s8Yb4pfusT')
+        +ax(org.discord)
           img(src='/static/img/discord.png')
 
       div.icon
