--- a/src/pug/about.pug
+++ b/src/pug/about.pug
@@ -11,7 +11,7 @@ block page
       h2 Who are we?
       p Input Labs Oy. (OsakeYhtiö) is a small company established in Finland, Europe.
       p Founded in 2022 by 2 friends, both engineers and gamers: Marcos (born in Spain) and Michael (born in Germany). Later several friends joined as testers, idea givers and contributors. And now we are waiting for you.
-      p You can talk with us on #[+a('TODO') Discord] anytime.
+      p You can talk with us on #[+ax(org.discord) Discord] anytime.
 
     div.box
       h2 Our principles and goals
