--- a/src/pug/blog/_blog.pug
+++ b/src/pug/blog/_blog.pug
@@ -28,7 +28,7 @@ block page
         h3 Other
         div
           +wikilink('next') Next blog entries
-          +wikilink('TODO', true) Roadmap
+          +wikilink(org.roadmap, true) Roadmap
 
     div.box.entry
       block content
