--- a/src/pug/contribute.pug
+++ b/src/pug/contribute.pug
@@ -10,8 +10,8 @@ block page
     div.box
       h2 Feedback
       p Input Labs is a #[em community-driven] effort, so you make us all better by simply using our stuff, and sharing your feedback and ideas with the other members.
-      p Join our #[+ax('TODO') Discord] for some casual talk.
-      p Check #[+ax('TODO') GitHub Discussions] for more organized forum-like posts and support.
+      p Join our #[+ax(org.discord) Discord] for some casual talk.
+      p Check #[+ax(org.forum) GitHub Discussions] for more organized forum-like posts and support.
 
     div.box
       h2 Open source
@@ -28,4 +28,4 @@ block page
     div.box
       h2 Become a tester
       p If you are the kind of person that likes to try new things, and/or if you are a person with disabilities, we would be very interested in your feedback about latest prototypes.
-      p Please ping us in #[+ax('TODO') Discord] #[em #testing] channel.
+      p Please ping us in #[+ax(org.discord) Discord] #[em #testing] channel.
