--- a/src/pug/devices/alpakka.pug
+++ b/src/pug/devices/alpakka.pug
@@ -46,7 +46,7 @@ block page
       mixin done(state)
         span(style='font-family:monospace') [#{state ? '✔' : ' '}]
       h2 Overview of development
-      p See #[+ax('TODO') Roadmap] for more details.
+      p See #[+ax(org.roadmap) Roadmap] for more details.
       ul.nobullet
         li #[+done(1)] Concept.
         li #[+done(1)] Breadboard prototypes.
