--- a/src/pug/devices/alpakka/manual/diy_pcb.pug
+++ b/src/pug/devices/alpakka/manual/diy_pcb.pug
@@ -9,13 +9,13 @@ block content
 
   h3 Order from a PCB prototyping company
   p The PCB schematics and layout are available at #[+ax('TODO') Alpakka PCB] repository, along with the consolidated order files for the reference design.
-  p We recommend to use a PCB prototyping service such as #[+ax('TODO') JLCPCB], which manufacture cheap PCBs in low quantities, with the option to solder a good assortment of SMD (Surface Mount Devices) onto the board. Though is possible to use any other service of your preference.
+  p We recommend to use a PCB prototyping service such as #[+ax('https://jlcpcb.com') JLCPCB], which manufacture cheap PCBs in low quantities, with the option to solder a good assortment of SMD (Surface Mount Devices) onto the board. Though is possible to use any other service of your preference.
   p The steps to order a PCB from #[em JLCPCB] are:
   ol.spaced
     li Get the consolidated order files (#[em .csv] and #[em .zip]) from #[+ax('TODO') Releases].
     ul
       li Or alternatively create the files yourself after you modified the schematics.
-    li Go to #[+ax('TODO') JLCPCB] → #[em Order now]
+    li Go to #[+ax('https://jlcpcb.com') JLCPCB] → #[em Order now]
     li Upload gerber files: #[em jlcpcb_gerber.zip]
     li Wait until gerber files are processed.
     li Change #[em Remove Order Number] to #[em Specify a location]
