Added dates to blog entries

--- a/src/pug/blog/dual_gyro.pug
+++ b/src/pug/blog/dual_gyro.pug
@@ -6,7 +6,7 @@ block append subtitle
 block content
   h2 Dual gyro
   hr
-  p: i November 2022
+  p: i 22 November 2022
   p: i Note: This is a re-formatted version of #[+ax('https://github.com/marcos-diaz/research') Sensor fusion on redundant angular rate sensors] white paper, research conducted even before Input Labs was established, but if you want Input Labs to make research like this in the future, please consider becoming a supporter on #[+ax('TODO') Patreon].
   hr
 
