--- a/src/pug/blog/live.pug
+++ b/src/pug/blog/live.pug
@@ -6,7 +6,7 @@ block append subtitle
 block content
   h2 We are live
   hr
-  p: i October 2022
+  p: i 22 November 2022
   hr
 
   p: b The cat is out of the bag =^_^=
