Fixed patreon links

--- a/src/pug/_template.pug
+++ b/src/pug/_template.pug
@@ -54,7 +54,7 @@ html
           img(src='/static/img/discord.png')
 
       div.icon
-        +ax('TODO')
+        +ax(org.patreon)
           img(src='/static/img/patreon.png')
 
       div.nav(class=((PAGE=='nav') ? '' : 'hide'))
