--- a/src/pug/contribute.pug
+++ b/src/pug/contribute.pug
@@ -23,7 +23,7 @@ block page
       p Input Labs is possible thanks to the combined effort and #[em thousands of hours of work] made by passionate engineers, designers, testers, and contributors.
       p Please consider supporting Input Labs research by becoming a member in Patreon, so we can keep doing what we love to do.
       p Our next goal is to acquire laboratory materials and tools, such as different models of 3D printers, oscilloscope, thermal camera, ultra-high framerate monitors, and other hardware and software.
-      p Check #[+ax('TODO') Patreon] for details about tier rewards and more.
+      p Check #[+ax(org.patreon) Patreon] for details about tier rewards and more.
 
     div.box
       h2 Become a tester
