--- a/src/pug/blog/next.pug
+++ b/src/pug/blog/next.pug
@@ -7,5 +7,5 @@ block content
   h2 Next blog entries
   hr
 
-  p Become a #[+ax('TODO') Patron] and vote on which topics we should write about, either research or anything else, or suggest new topics.
+  p Become a #[+ax(org.patreon) Patron] and vote on which topics we should write about, either research or anything else, or suggest new topics.
   p We already have some ideas we want to do for sure (the grayed out items on the index widget), and many others down in the roadmap. Writing these takes time and effort, so is up to you to decide!
