--- a/src/pug/db/improve.pug
+++ b/src/pug/db/improve.pug
@@ -14,4 +14,4 @@ block content
   p This database is not supposed to be a replacement for the awesome #[+ax('https://www.pcgamingwiki.com') PC Gaming Wiki], but to compile and display accessibility info in a more streamlined way.
 
   h3 Vote which games we review next
-  p Become a member in #[+a('TODO') Patreon] and propose which batch of games are reviewed next, or which other accessibility options should be reviewed.
+  p Become a member in #[+ax(org.patreon) Patreon] and propose which batch of games are reviewed next, or which other accessibility options should be reviewed.
