--- a/src/pug/devices/alpakka/gallery.pug
+++ b/src/pug/devices/alpakka/gallery.pug
@@ -11,12 +11,23 @@ block page
       a.img(href=src target='_blank')
         img(src=src)
 
+  mixin imglinkexternal(img, url, text)
+    div.box.image
+      a.img(href=url target='_blank')
+        img(src=img)
+        if text
+          div #{text} ->
+
   div.boxes.grid
       +imglink('/static/img/alpakka_black_silver_stand.jpg')
       +imglink('/static/img/alpakka_black_silver_top.jpg')
       +imglink('/static/img/alpakka_black_silver_back.jpg')
       +imglink('/static/img/alpakka_black_silver_bottom.jpg')
-      +imglink('/static/img/alpakka_rainbow.jpg')
+      +imglinkexternal(
+        '/static/img/youtube.jpg',
+        'https://www.youtube.com/@inputlabs',
+        'Gameplay and DIY videos'
+      )
       +imglink('/static/img/alpakka_brief.jpg')
       +imglink('/static/img/alpakka_black_purple_stand.jpg')
       +imglink('/static/img/alpakka_black_blue_stand.jpg')
@@ -26,3 +37,4 @@ block page
       +imglink('/static/img/alpakka_black_orange_stand.jpg')
       +imglink('/static/img/alpakka_black_red_stand.jpg')
       +imglink('/static/img/alpakka_black_pink_stand.jpg')
+      +imglink('/static/img/alpakka_rainbow.jpg')
