Fixed youtube link in FAQ

--- a/src/pug/devices/alpakka/manual/faq.pug
+++ b/src/pug/devices/alpakka/manual/faq.pug
@@ -13,7 +13,7 @@ block content
 
   h3 It is as good as a mouse?
   p It depends, in theory the Alpakka gyro is as good as a mouse being used on a medium-size mouse mat (about 25 cm. diagonal). Also as if the mouse mat had zero friction, which is sometimes good and sometimes bad.
-  p It can definitely be used in competitive games, and keep a good fight against mouse players, check this #[+ax('TODO') Demo Video].
+  p It can definitely be used in competitive games, and keep a good fight against mouse players, check this #[+ax('https://www.youtube.com/watch?v=bmN4ZRrZH2E') Demo Video].
   hr
 
   h3 Are you trying to replace mouse and keyboard?
