--- a/src/pug/press.pug
+++ b/src/pug/press.pug
@@ -10,7 +10,7 @@ block page
     div.box
       h2 Press kit
       p Download a package with images and other media, for use in articles reporting about us.
-      p Download #[+a('TODO') press_kit.zip]
+      p Download #[+dl('/static/download/press_kit.zip') press_kit.zip]
 
     div.box
       h2 Get free hardware for review
