Typo in DB glossary

--- a/src/pug/db/glossary.pug
+++ b/src/pug/db/glossary.pug
@@ -5,7 +5,7 @@ block append subtitle
 
 block content
   h2 Glossary
-  p The aspects evaluated in each game, and its meaning.
+  p The aspects evaluated for each game, and its meaning.
   hr
 
   div.mosaic
