Fixed missing links to repos

--- a/src/pug/devices/alpakka/components.pug
+++ b/src/pug/devices/alpakka/components.pug
@@ -14,10 +14,10 @@ block page
       table.data
         tr
           td Alpakka firmware source code
-          td: +a('TODO') Repository
+          td: +ax('https://github.com/inputlabs/alpakka_firmware') Repository
         tr
           td Alpakka firmware latest build
-          td: +a('TODO') Repository
+          td: +ax('https://github.com/inputlabs/alpakka_firmware/releases/latest') Repository
 
     div.box
       h2 Printed Circuit Board
@@ -26,10 +26,10 @@ block page
       table.data
         tr
           td Alpakka PCB KiCad schematics
-          td: +a('TODO') Repository
+          td: +ax('https://github.com/inputlabs/alpakka_pcb') Repository
         tr
           td Alpakka PCB ready-to-order files
-          td: +a('TODO') Repository
+          td: +ax('https://github.com/inputlabs/alpakka_pcb/releases/latest') Repository
 
     div.box
       h2 Microcontroller
@@ -46,10 +46,10 @@ block page
       table.data
         tr
           td Blender project with source 3D models
-          td: +a('TODO') Repository
+          td: +ax('https://github.com/inputlabs/alpakka_case') Repository
         tr
           td STL and M3F files ready for 3D printing
-          td: +a('TODO') Repository
+          td: +ax('https://github.com/inputlabs/alpakka_case/tree/main/prints') Repository
 
     div.box
       h2 3D printer filament
