--- a/src/pug/devices/alpakka/manual/diy_case.pug
+++ b/src/pug/devices/alpakka/manual/diy_case.pug
@@ -7,6 +7,9 @@ block content
   h2 3D-printed case & buttons
   hr
 
+  h3 3D models
+  p The source designs for the case and buttons are available at #[+ax('https://github.com/inputlabs/alpakka_case') Alpakka 3D-print] repository, along with the pre-built #[+ax('https://github.com/inputlabs/alpakka_case/tree/main/prints/stl') STL] and #[+ax('https://github.com/inputlabs/alpakka_case/tree/main/prints/3mf') 3MF] files for the reference designs.
+
   h3 3D printer
   p Any modern FDM (Fused Deposition Modeling) printer should be able to print Alpakka case and buttons, the parts are designed so they do not require any additional supports, but the printer must be able do generate at least 10 millimeter bridges.
   p Resin 3D printers should be an option too, but we did not test these yet.
@@ -17,7 +20,7 @@ block content
   h3 Materials and tools
   p: b Required:
   ul
-    li 3D models #[+ax('TODO') STL] or #[+ax('TODO') 3MF] files.
+    li 3D models (see above).
     li 3D printer.
     li Normal filament (PLA recommended) in one or more colors.
     li Electrically conductive filament.
