--- a/src/pug/devices/alpakka/manual/firmware.pug
+++ b/src/pug/devices/alpakka/manual/firmware.pug
@@ -8,7 +8,7 @@ block content
   hr
 
   h3 Get latest firmware
-  p The software embedded in the controller can be easily updated to get new features and fixes. Latest builds of the firmware #[em .uf2 files] are located in the #[+a('TODO') Firmware Repository].
+  p The software embedded in the controller can be easily updated to get new features and fixes. Latest builds of the firmware #[em .uf2 files] are located in the Firmware repository #[+ax('https://github.com/inputlabs/alpakka_firmware/releases/latest') Releases].
 
   h3 Install / Update the firmware
   ul
