--- a/src/pug/contribute.pug
+++ b/src/pug/contribute.pug
@@ -16,7 +16,7 @@ block page
     div.box
       h2 Open source
       p #[em Explore, modify, and re-share!] This is all about our open source projects, so feel free to play with them, propose features, report bugs, and submit pull requests with improvements.
-      p Browse our #[+ax('https://github.com/inputlabs') GitHub Repositories] for the source code and hardware designs.
+      p Browse our #[+ax(org.repos) GitHub Repositories] for the source code and hardware designs.
 
     div.box
       h2 Patreon
