Added notes about Steam input config UI

--- a/src/pug/devices/alpakka/manual/faq.pug
+++ b/src/pug/devices/alpakka/manual/faq.pug
@@ -39,6 +39,11 @@ block content
   p Approximately 90% of games are compatible when using #[em Fusion Input], see the #[+a(defaultPage('/db')) Accessibility DB] for a comprehensive list of games.
   hr
 
+  h3 It is compatible with Steam input configurator?
+  p Yes, the Xinput emulated device shows up in the Steam UI as a normal controller, so remapping is possible that way too.
+  p But we recommend instead to use the #[+a('profiles') Built-in profiles], and remap the controls directly in the game if required (like you do with a normal keyboard and mouse), since it is much simpler! (there is no need for that additional layer of translation).
+  hr
+
   h3 Is it wireless?
   p Not yet, but making the controller wireless is something we want to do as soon as possible. The reference design already have a rear bay for a battery, but there is still work to do.
   hr
