--- a/src/pug/devices/alpakka/manual/profiles.pug
+++ b/src/pug/devices/alpakka/manual/profiles.pug
@@ -83,4 +83,5 @@ block content
   p While most of people won't need to tinker with profiles, we understand that some players will have to, either because physical constrains or because very specific niche games.
   p But we are still developing the method to easily create or modify profiles, and load them via USB cable. Meanwhile the only way to tweak profiles is to edit and compile the firmware yourself. See #[+a('dev_profiles') Modify Profiles] page.
   p Also please remember you can #[+a('/contribute') Contribute] with Input Labs, and help us developing these.
+  p Alternatively, the Steam input configurator UI can also be used to remap controls.
 
