Added youtube header link

--- a/src/pug/_template.pug
+++ b/src/pug/_template.pug
@@ -54,6 +54,10 @@ html
           img(src='/static/img/discord.png')
 
       div.icon
+        +ax(org.youtube)
+          img(src='/static/img/youtube.png')
+
+      div.icon
         +ax(org.patreon)
           img(src='/static/img/patreon.png')
 
