--- a/src/pug/devices/alpakka/gallery.pug
+++ b/src/pug/devices/alpakka/gallery.pug
@@ -25,7 +25,7 @@ block page
       +imglink('/static/img/alpakka_black_silver_bottom.jpg')
       +imglinkexternal(
         '/static/img/youtube.jpg',
-        'https://www.youtube.com/@inputlabs',
+        org.youtube,
         'Gameplay and DIY videos'
       )
       +imglink('/static/img/alpakka_brief.jpg')
