--- a/src/pug/_mixins.pug
+++ b/src/pug/_mixins.pug
@@ -15,6 +15,7 @@
     roadmap: 'https://github.com/orgs/inputlabs/projects/2',
     forum: 'https://github.com/orgs/inputlabs/discussions',
     discord: 'https://discord.gg/s8Yb4pfusT',
+    youtube: 'https://www.youtube.com/@inputlabs',
     patreon: 'https://www.patreon.com/inputlabs',
   }
 
