Added google verification meta

--- a/src/pug/_template.pug
+++ b/src/pug/_template.pug
@@ -10,6 +10,10 @@ html
       |
       block title
     link(rel='canonical' href=('https://inputlabs.io' + (PATH=='/' ? '' : PATH)))
+    meta(
+      name='google-site-verification'
+      content='1fMlzAxn174Ubb6hZmxRhVfYwiedS5Uc7089bxcCup0'
+    )
     if ENV != 'prod'
       meta(name='robots' content='noindex')
     //- Style.
