--- a/src/pug/alpakka/components.pug
+++ b/src/pug/alpakka/components.pug
@@ -1,10 +1,10 @@
-extends ../../_template.pug
+extends ../_template.pug
 
 block title
   | Alpakka components
 
 block page
-  include ../_alpakka_header.pug
+  include _title.pug
 
   div.boxes.grid
     div.box
