--- a/src/pug/alpakka/gallery.pug
+++ b/src/pug/alpakka/gallery.pug
@@ -1,10 +1,10 @@
-extends ../../_template.pug
+extends ../_template.pug
 
 block title
   | Alpakka images and videos
 
 block page
-  include ../_alpakka_header.pug
+  include _title.pug
 
   mixin imglink(src)
     div.box.image
