--- a/src/pug/alpakka/manual/_manual.pug
+++ b/src/pug/alpakka/manual/_manual.pug
@@ -1,4 +1,4 @@
-extends ../../../_template.pug
+extends ../../_template.pug
 
 block title
   block subtitle
@@ -6,7 +6,7 @@ block title
     |
 
 block page
-  include ../../_alpakka_header.pug
+  include ../_title.pug
 
   mixin home
     img(src='/static/manual/button_home.svg' height='14px')
