--- a/src/pug/alpakka/manual/diy_case.pug
+++ b/src/pug/alpakka/manual/diy_case.pug
@@ -24,7 +24,7 @@ block content
     li 3D printer.
     li Normal filament (PLA recommended) in one or more colors.
     li Electrically conductive filament.
-  p Check #[+a('/devices/alpakka/components') Components] for more details.
+  p Check #[+a('/alpakka/components') Components] for more details.
   hr
 
   h3 Printing front
