--- a/src/pug/alpakka/manual/diy_solder.pug
+++ b/src/pug/alpakka/manual/diy_solder.pug
@@ -8,7 +8,7 @@ block content
   hr
 
   h3 Remaining components
-  p The manufacturing process only soldered the SMD devices on the front side of the PCB, so there are a few extra components to be soldered manually (SMD components on the back, and through-hole components on the front), check which components you need in #[+a('/devices/alpakka/components') Components].
+  p The manufacturing process only soldered the SMD devices on the front side of the PCB, so there are a few extra components to be soldered manually (SMD components on the back, and through-hole components on the front), check which components you need in #[+a('/alpakka/components') Components].
 
   h3 Tools
   p: b Required:
