--- a/src/pug/alpakka/manual/mouse.pug
+++ b/src/pug/alpakka/manual/mouse.pug
@@ -76,4 +76,4 @@ block content
         img(src='/static/manual/turn_45.svg' width='50%' display='inline')
         img(src='/static/manual/turn_3d.svg' width='50%' display='inline')
 
-  p Alternatively you can check each game recommended in-game sensitivity for the games we already evaluated in the #[a(href=defaultPage('/db')) Accessibility Database].
+  p Alternatively you can check each game recommended in-game sensitivity for the games we already evaluated in the #[a(parent.db) Accessibility Database].
