--- a/src/pug/blog/live.pug
+++ b/src/pug/blog/live.pug
@@ -26,7 +26,7 @@ block content
   p Doing open source and working with videogames is cool, but could Input Labs ever be something more than a side project? we thought that by introducing some twists, it could work:
   ul
     li Twist #1 is to design controllers with performance so exceptional, that people with no disabilities will also want to use them, creating a much bigger userbase for feedback, contributions, and funding.
-    li Twist #2 is to start working on a more mainstream controller first (#[+a('/devices/alpakka') Alpakka]), and then moving to more specific disability use-case devices, after the core team and community is more established.
+    li Twist #2 is to start working on a more mainstream controller first (#[+a('/alpakka') Alpakka]), and then moving to more specific disability use-case devices, after the core team and community is more established.
 
   p #[em Special thanks to:] Jaakko, Matti, Saku, Macarena, Kalle, Tim, Nico, Jean-Luc, and Joosa; for helping out while the project was being created.
 
