--- a/src/pug/devices.pug
+++ b/src/pug/devices.pug
@@ -8,11 +8,11 @@ block page
 
   div.boxes.grid.center
     div.box.image
-      a.img(href='/devices/alpakka')
+      a.img(href='/alpakka')
         img(src='/static/img/alpakka_black_silver_stand.jpg')
         div Alpakka: Nextgen gyro
 
     div.box.image
-      a.img(href='/devices/kapybara')
+      a.img(href='/kapybara')
         img(src='/static/img/kapybara.png')
         div Kapybara: One-hand OP
