--- a/src/pug/_mixins.pug
+++ b/src/pug/_mixins.pug
@@ -19,29 +19,23 @@
     patreon: 'https://www.patreon.com/inputlabs',
   }
 
+  const parent = {
+    db:             '/db/glossary',
+    blog:           '/blog/live',
+    alpakkaManual: '/alpakka/manual/mouse',
+  }
+
   const loadMathJax = [
     'dual_gyro',
     'placeholder'
   ].includes(PAGE)
 
-  const defaultPage = (path) => {
-    const paths = {
-      '/db':                     '/db/glossary',
-      '/devices/alpakka/manual': '/devices/alpakka/manual/mouse',
-      '/blog':                   '/blog/live',
-    }
-    for (let key of Object.keys(paths)) {
-      if (path == key) return paths[key]
-    }
-    throw `Error: default page not found: ${path}`
-  }
-
 mixin nav
   - const active = (name) => (name==SECTION) ? 'active' : ''
-  div.tab(class=active('devices')):    +a('/devices')           Devices
-  div.tab(class=active('contribute')): +a('/contribute')        Contribute
-  div.tab(class=active('db')):         +a(defaultPage('/db'))   Accessibility DB
-  div.tab(class=active('blog')):       +a(defaultPage('/blog')) Blog
+  div.tab(class=active('devices')):    +a('/devices')    Devices
+  div.tab(class=active('contribute')): +a('/contribute') Contribute
+  div.tab(class=active('db')):         +a(parent.db)     Accessibility DB
+  div.tab(class=active('blog')):       +a(parent.blog)   Blog
 
 mixin wikilink(href, external=false)
   - const active = (href==PAGE)
