--- a/src/pug/_template.pug
+++ b/src/pug/_template.pug
@@ -9,13 +9,14 @@ html
       | Input Labs -
       |
       block title
-    link(rel='canonical' href=('https://inputlabs.io' + (PATH=='/' ? '' : PATH)))
-    meta(
-      name='google-site-verification'
-      content='1fMlzAxn174Ubb6hZmxRhVfYwiedS5Uc7089bxcCup0'
-    )
     if ENV != 'prod'
+      link(rel='canonical' href=('https://inputlabs.io' + (PATH=='/' ? '' : PATH)))
       meta(name='robots' content='noindex')
+    else
+      meta(
+        name='google-site-verification'
+        content='1fMlzAxn174Ubb6hZmxRhVfYwiedS5Uc7089bxcCup0'
+      )
     //- Style.
     meta(name='viewport' content='initial-scale=0.68')
     link(rel='stylesheet' href='/static/style.css')
