--- a/src/pug/alpakka/manual/faq.pug
+++ b/src/pug/alpakka/manual/faq.pug
@@ -36,7 +36,7 @@ block content
   h3 Which game launchers and games are compatible?
   p All game launchers are compatible, since the firmware does all the processing in the controller, and no apps nor drivers are required on the computer.
   p 100% of games are compatible when emulating a mouse and keyboard.
-  p Approximately 90% of games are compatible when using #[em Fusion Input], see the #[+a(defaultPage('/db')) Accessibility DB] for a comprehensive list of games.
+  p Approximately 90% of games are compatible when using #[em Fusion Input], see the #[+a(parent.db) Accessibility DB] for a comprehensive list of games.
   hr
 
   h3 It is compatible with Steam input configurator?
