--- a/src/pug/_mixins.pug
+++ b/src/pug/_mixins.pug
@@ -20,8 +20,8 @@
   }
 
   const parent = {
-    db:             '/db/glossary',
-    blog:           '/blog/live',
+    db:            '/db/glossary',
+    blog:          '/blog/live',
     alpakkaManual: '/alpakka/manual/mouse',
   }
 
@@ -31,7 +31,13 @@
   ].includes(PAGE)
 
 mixin nav
-  - const active = (name) => (name==SECTION) ? 'active' : ''
+  -
+    const active = (name) => {
+      if (name==SECTION) return 'active'
+      const devices = ['alpakka', 'kapybara']
+      if (name=='devices' && devices.includes(SECTION)) return 'active'
+      return ''
+    }
   div.tab(class=active('devices')):    +a('/devices')    Devices
   div.tab(class=active('contribute')): +a('/contribute') Contribute
   div.tab(class=active('db')):         +a(parent.db)     Accessibility DB
