Fixed missing link to repo

--- a/src/pug/alpakka/manual/dev_unix.pug
+++ b/src/pug/alpakka/manual/dev_unix.pug
@@ -90,4 +90,4 @@ block content
     Waiting for RPI-RP2 drive
     UF2 loaded into Pico
 
-  p To check all other developer commands, check the Firmware repository #[+ax() Readme].
+  p To check all other developer commands, check the Firmware repository #[+ax('https://github.com/inputlabs/alpakka_firmware') Readme].
