Added blog weekly 1

--- a/src/pug/blog/_blog.pug
+++ b/src/pug/blog/_blog.pug
@@ -16,6 +16,7 @@ block page
         h3 News
         div
           +wikilink('live') We are live
+          +wikilink('week_1') Weekly report 1
 
         h3 Research
         div
