Fix weekly report link

--- a/src/pug/_mixins.pug
+++ b/src/pug/_mixins.pug
@@ -21,7 +21,7 @@
 
   const parent = {
     db:            '/db/glossary',
-    blog:          '/blog/weekly_1',
+    blog:          '/blog/report_1',
     alpakkaManual: '/alpakka/manual/mouse',
   }
 
