Added manual page for console legacy profile

--- a/src/pug/alpakka/manual/_manual.pug
+++ b/src/pug/alpakka/manual/_manual.pug
@@ -50,6 +50,7 @@ block page
           +wikilink('profile_fps_fusion') FPS Fusion
           +wikilink('profile_fps_wasd') FPS WASD
           +wikilink('profile_console') Console
+          +wikilink('profile_console_legacy') Console Legacy
           +wikilink('profile_desktop') Desktop
 
         h3 Developer
