--- a/src/pug/alpakka/manual/profiles.pug
+++ b/src/pug/alpakka/manual/profiles.pug
@@ -60,9 +60,8 @@ block content
       div &nbsp;
       hr
       img.mt.centered(src='/static/manual/led_triangle_down.png' width='50px')
-      em Console legacy
+      +a('profile_console_legacy') Console Legacy
       div.dim (Hold D-pad)
-      i.dim Not available yet
 
     div.card.inner.center.basis4
       div Hold #[em Home #[+home]] +#[br] #[em.nowrap D-pad left #[+dpad_left]]
