Added pending profiles to the manual index

--- a/src/pug/alpakka/manual/_manual.pug
+++ b/src/pug/alpakka/manual/_manual.pug
@@ -52,6 +52,9 @@ block page
           +wikilink('profile_console') Console
           +wikilink('profile_console_legacy') Console Legacy
           +wikilink('profile_desktop') Desktop
+          div.inactive Racing #[i (soon)]
+          div.inactive Flight #[i (soon)]
+          div.inactive RTS #[i (soon)]
 
         h3 Developer
         div
@@ -59,8 +62,8 @@ block page
           +wikilink('dev_unix') Setup in Linux
           +wikilink('dev_windows') Setup in Windows
           +wikilink('dev_profiles') Modify profiles
-          div.inactive PCB development #[i (pending)]
-          div.inactive Case mods #[i (pending)]
+          div.inactive PCB development #[i (soon)]
+          div.inactive Case mods #[i (soon)]
 
         h3 Other
         div
