--- a/src/pug/alpakka.pug
+++ b/src/pug/alpakka.pug
@@ -65,8 +65,8 @@ block page
       ul
         li You want to play FPS games on the sofa.
         li You want to play mouse-cursor games (eg RTS or city builders) on the sofa.
-        li Is difficult for you to use a keyboard.
-        li Is difficult for you to use a thumbstick for aiming.
+        li It is difficult for you to use a keyboard.
+        li It is difficult for you to use a thumbstick for aiming.
         li You have special needs that require controller modifications.
         li You are interested in a more natural way to aim (actually aiming at things / similar to VR) than traditional input methods.
 
