--- a/src/pug/kapybara.pug
+++ b/src/pug/kapybara.pug
@@ -17,7 +17,7 @@ block page
       h2 Use-cases
       p The Kapybara controller could be for you if:
       ul
-        li Is difficult for you to use controllers designed for 2 hands.
+        li It is difficult for you to use controllers designed for 2 hands.
         li You still want to use mouse, but is difficult for you to use a keyboard.
         li You still want to use mouse, but your prefer a thumbstick over WASD keys.
 
