Added DB entries for patreon voting round 1

--- a/src/pug/_mixins.pug
+++ b/src/pug/_mixins.pug
@@ -20,7 +20,7 @@
   }
 
   const parent = {
-    db:            '/db/glossary',
+    db:            '/db/borderlands_3',
     blog:          '/blog/report_1',
     alpakkaManual: '/alpakka/manual/mouse',
   }
