--- a/src/pug/db/_db.pug
+++ b/src/pug/db/_db.pug
@@ -20,15 +20,23 @@ block page
 
         h3 Games
         div
+          +wikilink('borderlands_3') Borderlands 3
+          +wikilink('bullets_per_minute') Bullets Per Minute
+          +wikilink('warzone_2') Call of Duty: Warzone 2
           +wikilink('days_gone') Days Gone
           +wikilink('deep_rock_galactic') Deep Rock Galactic
-          +wikilink('doom_2016') Doom 2016
+          +wikilink('doom_2016') Doom (2016)
+          +wikilink('fortnite') Fortnite
           +wikilink('ghostrunner') Ghostrunner
           +wikilink('half_life_2') Half-Life 2
+          +wikilink('horizon_zero_dawn') Horizon Zero Dawn
+          +wikilink('hunt_showdown') Hunt: Showdown
           +wikilink('insurgency_sandstorm') Insurgency: Sandstorm
+          +wikilink('no_mans_sky') No Man's Sky
           +wikilink('noita') Noita
           +wikilink('prodeus') Prodeus
           +wikilink('pubg') PUBG: Battlegrounds
+          +wikilink('rainbow_six_siege') Rainbow Six Siege
           +wikilink('the_witcher_3') The Witcher 3
 
     div.box.entry
