Added progress report 2

--- a/src/pug/alpakka/manual/profile_console_legacy.pug
+++ b/src/pug/alpakka/manual/profile_console_legacy.pug
@@ -8,7 +8,7 @@ block content
   hr
 
   p Traditional #[em gamepad] input/output, with mouse emulation completely disabled, and #[em right thumbstick emulated] in the 8-direction switch.
-  p This is the last fallback for games that may have issues when mouse movement is detected, that do not support keyboard bindings, or in which a second thumbstick is absolutely mandatory.
+  p This is the last fallback for games that may have issues when mouse movement is detected, that do not support keyboard and mouse at all, or in which a second thumbstick is absolutely mandatory.
 
   img.wide.mt(src='/static/manual/profile_console_legacy.svg')
   hr
