--- a/src/pug/blog/report_1.pug
+++ b/src/pug/blog/report_1.pug
@@ -1,10 +1,10 @@
 extends _blog.pug
 
 block append subtitle
-  | Weekly report #1
+  | Progress report #1
 
 block content
-  h2 Weekly report #1
+  h2 Progress report #1
   hr
   p: i 3 December 2022
   hr
