--- a/src/pug/blog/_blog.pug
+++ b/src/pug/blog/_blog.pug
@@ -16,7 +16,8 @@ block page
         h3 News
         div
           +wikilink('live') We are live
-          +wikilink('report_1') Weekly report 1
+          +wikilink('report_1') Progress report 1
+          +wikilink('report_2') Progress report 2
 
         h3 Research
         div
