--- a/src/pug/blog/report_2.pug
+++ b/src/pug/blog/report_2.pug
@@ -11,7 +11,7 @@ block content
 
   p A new profile #[+a('/alpakka/manual/profile_console_legacy') Console Legacy] is now implemented. It comes with mouse emulation completely disabled, and #[em right thumbstick emulated] in the 8-direction switch.
 
-  p This is the last fallback for games that may have issues when mouse movement is detected, that do not support mouse and keyboard at all, or in which a second thumbstick is absolutely mandatory. This kind of games #[em should be extremely rare], so if you know some please ping us.
+  p This is the last fallback for games that may have issues when mouse movement is detected, that do not support mouse and keyboard at all, or in which a second thumbstick is absolutely mandatory. These kind of games #[em should be extremely rare], so if you know some please ping us.
 
   p To support this new profile, some core features of the firmware had to be improved.
 
