Changed FAQ entry for cost

--- a/src/pug/alpakka/manual/faq.pug
+++ b/src/pug/alpakka/manual/faq.pug
@@ -79,8 +79,8 @@ block content
     li If you become a tester. See #[+a('/contribute') Contribute].
   hr
 
-  +h3id('cost') How much would it cost to build my own controller?
-  p It may vary a lot depending on different suppliers and manufacturers, but If you already have the required tools (3D printer, solder iron, etc...), and ignoring shipping costs of components, each controller may cost approximately between $15 and $25.
+  +h3id('cost') How much cost to build my own controller?
+  p It vary a lot depending on different suppliers and manufacturers, but if you already have the required tools (3D printer, solder iron, etc...), each controller cost approximately between $20 and $40 in raw materials, even though shipping costs and minimum order of some materials (eg. filament sold in kilograms) may increase the initial costs.
   hr
 
   +h3id('angular') Why is the case so angular?
